# DeeplearningAppium

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
AppiumTest/: test_appium.py
