[project]
name = "deeplearningappium"
version = "0.1.0"
description = ""
authors = [
    {name = "mmol93",email = "ljws93@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appium-python-client (>=5.0.0,<6.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
